<resources>
    <string name="app_name">UMarketplace</string>
    <string name="saveButton">Save</string>
    <string name="action_edit">Add</string>
    <string name="action_list">List</string>
    <string name="action_map">Map</string>
    <string name="action_view">View</string>
    <string name="nav_header_title">U Marketplace</string>
    <string name="nav_header_subtitle">test@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="productsNotFound">No Items Yet…\nGo Create a one!</string>
    <string name="productError">Error : Couldn\'t Create a product…</string>
    <string name="messageLoading">Please Wait while information is Loading...</string>
    <!--  START Firebase Resources -->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_placemark_image">Select product image</string>
    <string name="for_sale">For Sale</string>
    <string name="sold">Sold</string>
    <string name="title_activity_maps">activity map</string>
    <string name="menuLocation">Location</string>
    <string name="menuSave">Save</string>
    <string name="menuImage">Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="comment">Review</string>
    <string name="paypal">paypal</string>
    <string name="aboutus_message">This is a Student Marketplace \n built by a student!</string>
    <string name="productTitle">productTitle</string>
    <string name="productSubtitle">productSubtitle</string>
    <string name="addButton">addButton</string>
    <string name="direct">direct</string>
    <string name="amount">Amount 0.00€</string>
    <string name="total">total</string>
    <string name="totalSoFar">totalSoFar</string>
    <string name="enter_amount">enter_amount</string>
    <string name="message">message</string>
    <string name="payment">payment</string>
    <string name="group_communicate">group_communicate</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="placeholder">image placeholder</string>
    <string name="action_darkmode">Dark mode</string>
</resources>