<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="productvm"
            type="ie.wit.umarketplace.ui.edit.EditViewModel" />
    </data>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.edit.EditFragment">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/title"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={productvm.observableProduct.title}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/amount"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/description"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/amt">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={productvm.observableProduct.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/Category"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description">


                <RadioButton
                    android:id="@+id/for_sale_product"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:checked="@{productvm.observableProduct.category == 1}"
                    android:onClick="@{()->productvm.radioButtonCategory(1)}"
                    android:text="@string/for_sale" />

                <RadioButton
                    android:id="@+id/sold_product"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:checked="@{productvm.observableProduct.category == 2}"
                    android:onClick="@{()->productvm.radioButtonCategory(2)}"
                    android:text="@string/sold" />

            </RadioGroup>



            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="269dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.535"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Category"
                app:srcCompat="@drawable/placeholder_image" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="405dp"
                android:layout_height="244dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImage"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="90dp"
                android:layout_height="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="84dp"
                android:text="@string/placeholder"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/productImage"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>